--- a/app/src/main/res/layout/dialog_detail_video.xml
+++ b/app/src/main/res/layout/dialog_detail_video.xml
@@ -100,6 +100,29 @@
                     android:clickable="true"
                     android:layout_weight="1" />
             </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/dialog_video_collection_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:visibility="gone"
+                tools:visibility="visible">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="8dp"
+                    android:text="Sammlungen:"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/dialog_video_collection"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="true" />
+            </LinearLayout>
         </LinearLayout>
 
         <ImageView
