--- a/app/src/main/res/layout/list_item_collection.xml
+++ b/app/src/main/res/layout/list_item_collection.xml
@@ -48,13 +48,6 @@
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
-                    <!--                    <TextView-->
-                    <!--                        android:layout_width="wrap_content"-->
-                    <!--                        android:layout_height="wrap_content"-->
-                    <!--                        android:layout_marginRight="8dp"-->
-                    <!--                        android:text="Titel:"-->
-                    <!--                        android:textStyle="bold" />-->
-
                     <TextView
                         android:id="@+id/listItem_collection_Titel"
                         style="@style/CaptionStyle"
@@ -69,6 +62,34 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:id="@+id/listItem_collection_rating_layout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:visibility="gone"
+                        tools:visibility="visible">
+
+                        <View
+                            android:id="@+id/view"
+                            android:layout_width="1dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginHorizontal="8dp"
+                            android:layout_marginVertical="3dp"
+                            android:background="?android:attr/listDivider" />
+
+                        <TextView
+                            android:id="@+id/listItem_collection_rating"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Ø 2.5" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=" ☆" />
+                    </LinearLayout>
 
                     <LinearLayout
                         android:id="@+id/listItem_collection_videos_count_layout"
@@ -93,23 +114,6 @@
 
                     </LinearLayout>
 
-                    <ImageView
-                        android:id="@+id/listItem_collection_later"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:padding="2dp"
-                        android:visibility="gone"
-                        app:srcCompat="@drawable/ic_time"
-                        tools:visibility="visible" />
-
-                    <ImageView
-                        android:id="@+id/listItem_collection_upcoming"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:padding="2dp"
-                        android:visibility="gone"
-                        app:srcCompat="@drawable/ic_calendar"
-                        tools:visibility="visible" />
 
                 </LinearLayout>
 
@@ -149,33 +153,6 @@
                     android:singleLine="true"
                     tools:text="Film 1, Film 2, Film 3" />
 
-                <LinearLayout
-                    android:id="@+id/listItem_collection_rating_layout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:visibility="gone"
-                    tools:visibility="visible">
-
-                    <View
-                        android:id="@+id/view"
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginHorizontal="8dp"
-                        android:layout_marginVertical="3dp"
-                        android:background="?android:attr/listDivider" />
-
-                    <TextView
-                        android:id="@+id/listItem_collection_rating"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="2.5" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text=" ☆" />
-                </LinearLayout>
 
             </LinearLayout>
 
