--- a/app/src/main/res/layout/main_fragment_videos.xml
+++ b/app/src/main/res/layout/main_fragment_videos.xml
@@ -398,6 +398,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/main_collection_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
