--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -39,7 +39,8 @@
                 android:textColor="#FFFFFF"
                 android:textSize="36sp"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.3" />
+                app:layout_collapseParallaxMultiplier="0.3"
+                tools:ignore="RtlCompat" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
