--- a/app/src/main/res/layout/dialog_detail_video.xml
+++ b/app/src/main/res/layout/dialog_detail_video.xml
@@ -246,7 +246,7 @@
                 android:id="@+id/dialog_video_release_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
+                android:layout_weight="3"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -268,10 +268,35 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/dialog_video_ageRating_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="8dp"
+                    android:text="FSK:"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/dialog_video_ageRating"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="8dp"
+                    android:layout_weight="1"
+                    tools:text="18" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/dialog_video_length_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
+                android:layout_weight="4"
+                android:gravity="end"
                 android:orientation="horizontal">
 
                 <TextView
@@ -283,13 +308,12 @@
 
                 <TextView
                     android:id="@+id/dialog_video_length"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="8dp"
-                    android:layout_weight="1"
                     tools:text="1h 27m" />
 
             </LinearLayout>
+
         </LinearLayout>
 
 
