--- a/app/src/main/res/layout/list_item_episode.xml
+++ b/app/src/main/res/layout/list_item_episode.xml
@@ -20,8 +20,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="4dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginRight="10dp"
         tools:text="1" />
+
+    <ImageView
+        android:id="@+id/listItem_episode_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:maxHeight="60dp"
+        android:maxWidth="60dp"
+        android:visibility="gone"
+        app:srcCompat="@drawable/ic_download"
+        tools:srcCompat="@drawable/simpsons_movie_poster"
+        android:layout_marginRight="10dp"
+        tools:visibility="visible" />
+
 
     <LinearLayout
         android:id="@+id/listItem_episode_detailLayout"
