--- a/app/src/main/res/layout/list_item_season.xml
+++ b/app/src/main/res/layout/list_item_season.xml
@@ -53,140 +53,25 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="end"
             android:orientation="horizontal">
 
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginRight="8dp"-->
-<!--                android:text="Folgen:"-->
-<!--                android:textStyle="bold|italic" />-->
-
             <TextView
                 android:id="@+id/listItem_season_episodes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                tools:text="20" />
+
+            <TextView
+                android:id="@+id/listItem_season_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="20" />
+                android:layout_marginRight="8dp"
+                tools:text="4.25 ☆" />
         </LinearLayout>
-        <!--        <LinearLayout-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:orientation="horizontal">-->
-
-        <!--            <TextView-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:layout_marginRight="8dp"-->
-        <!--                android:text="Darsteller:"-->
-        <!--                android:textStyle="bold" />-->
-
-        <!--            <TextView-->
-        <!--                android:id="@+id/listItem_show_Darsteller"-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:layout_weight="1"-->
-        <!--                android:ellipsize="marquee"-->
-        <!--                android:fadingEdge="horizontal"-->
-        <!--                android:focusable="true"-->
-        <!--                android:focusableInTouchMode="true"-->
-        <!--                android:marqueeRepeatLimit="marquee_forever"-->
-        <!--                android:scrollHorizontally="true"-->
-        <!--                android:singleLine="true"-->
-        <!--                android:text="Darsteller1, Darsteller 2, Darsteller 3, Darsteller 4" />-->
-
-        <!--            <LinearLayout-->
-        <!--                android:id="@+id/listItem_show_rating_layout"-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="match_parent"-->
-        <!--                android:orientation="horizontal"-->
-        <!--                android:visibility="gone"-->
-        <!--                tools:visibility="visible">-->
-
-        <!--                <View-->
-        <!--                    android:id="@+id/view"-->
-        <!--                    android:layout_width="1dp"-->
-        <!--                    android:layout_height="match_parent"-->
-        <!--                    android:layout_marginHorizontal="8dp"-->
-        <!--                    android:layout_marginVertical="3dp"-->
-        <!--                    android:background="?android:attr/listDivider" />-->
-
-        <!--                <TextView-->
-        <!--                    android:id="@+id/listItem_show_rating"-->
-        <!--                    android:layout_width="wrap_content"-->
-        <!--                    android:layout_height="wrap_content"-->
-        <!--                    android:text="2.5" />-->
-
-        <!--                <TextView-->
-        <!--                    android:layout_width="wrap_content"-->
-        <!--                    android:layout_height="wrap_content"-->
-        <!--                    android:text="☆" />-->
-        <!--            </LinearLayout>-->
-
-        <!--        </LinearLayout>-->
-
-        <!--        <LinearLayout-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:orientation="horizontal">-->
-
-        <!--            <LinearLayout-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:layout_weight="3"-->
-        <!--                android:orientation="horizontal">-->
-
-        <!--                <TextView-->
-        <!--                    android:layout_width="wrap_content"-->
-        <!--                    android:layout_height="wrap_content"-->
-        <!--                    android:layout_marginRight="8dp"-->
-        <!--                    android:text="Studio:"-->
-        <!--                    android:textStyle="bold" />-->
-
-        <!--                <TextView-->
-        <!--                    android:id="@+id/listItem_show_Studio"-->
-        <!--                    android:layout_width="match_parent"-->
-        <!--                    android:layout_height="wrap_content"-->
-        <!--                    android:layout_weight="1"-->
-        <!--                    android:ellipsize="marquee"-->
-        <!--                    android:fadingEdge="horizontal"-->
-        <!--                    android:focusable="true"-->
-        <!--                    android:focusableInTouchMode="true"-->
-        <!--                    android:marqueeRepeatLimit="marquee_forever"-->
-        <!--                    android:scrollHorizontally="true"-->
-        <!--                    android:singleLine="true" />-->
-        <!--            </LinearLayout>-->
-
-        <!--            <LinearLayout-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:layout_weight="2"-->
-        <!--                android:orientation="horizontal">-->
-
-        <!--                <TextView-->
-        <!--                    android:layout_width="wrap_content"-->
-        <!--                    android:layout_height="wrap_content"-->
-        <!--                    android:layout_marginRight="8dp"-->
-        <!--                    android:text="Genre:"-->
-        <!--                    android:textStyle="bold" />-->
-
-        <!--                <TextView-->
-        <!--                    android:id="@+id/listItem_show_Genre"-->
-        <!--                    android:layout_width="match_parent"-->
-        <!--                    android:layout_height="wrap_content"-->
-        <!--                    android:layout_weight="1"-->
-        <!--                    android:ellipsize="marquee"-->
-        <!--                    android:fadingEdge="horizontal"-->
-        <!--                    android:focusable="true"-->
-        <!--                    android:focusableInTouchMode="true"-->
-        <!--                    android:marqueeRepeatLimit="marquee_forever"-->
-        <!--                    android:scrollHorizontally="true"-->
-        <!--                    android:singleLine="true" />-->
-        <!--            </LinearLayout>-->
-
-        <!--        </LinearLayout>-->
     </LinearLayout>
 
     <ImageView
