--- a/app/src/main/res/menu/task_bar_main.xml
+++ b/app/src/main/res/menu/task_bar_main.xml
@@ -3,6 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/browser"
+        android:title="Browser"
+        android:visible="false"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/taskBar_main_settings"
         android:icon="@drawable/ic_settings"
         android:title="Einstellungen"
