--- a/app/src/main/res/layout/list_item_episode.xml
+++ b/app/src/main/res/layout/list_item_episode.xml
@@ -77,6 +77,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginEnd="8dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -118,6 +119,63 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
                 tools:text="4.5 ☆" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/listItem_episode_extraInformation_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:visibility="gone"
+            tools:visibility="visible">
+
+            <LinearLayout
+                android:id="@+id/listItem_episode_ageRating_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="8dp"
+                    android:text="FSK:"
+                    android:textStyle="bold|italic" />
+
+                <TextView
+                    android:id="@+id/listItem_episode_ageRating"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="8dp"
+                    android:layout_weight="1"
+                    tools:text="18" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/listItem_episode_length_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="8dp"
+                    android:text="Länge:"
+                    android:textStyle="bold|italic" />
+
+                <TextView
+                    android:id="@+id/listItem_episode_length"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="1h 27m" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
