--- a/app/src/main/res/menu/task_bar_main.xml
+++ b/app/src/main/res/menu/task_bar_main.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/browser"
         android:title="Browser"
-        android:visible="true"
+        android:visible="false"
         app:showAsAction="always" />
     <item
         android:id="@+id/taskBar_main_settings"
