--- a/app/src/main/res/layout/dialog_poster.xml
+++ b/app/src/main/res/layout/dialog_poster.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center_vertical"
     android:orientation="vertical">
 
-<!--    <com.maxMustermannGeheim.linkcollection.Utilitys.AspectRatioLayout-->
-<!--        android:id="@+id/dialog_poster_layout"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        app:aspectRatio="1.5"-->
-<!--        app:targetMode="height"-->
-<!--        android:gravity="center">-->
+    <!--    <com.maxMustermannGeheim.linkcollection.Utilitys.AspectRatioLayout-->
+    <!--        android:id="@+id/dialog_poster_layout"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        app:aspectRatio="1.5"-->
+    <!--        app:targetMode="height"-->
+    <!--        android:gravity="center">-->
 
     <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/dialog_poster_poster"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:adjustViewBounds="true"
         android:padding="16dp"
         tools:src="@drawable/simpsons_movie_poster" />
-<!--    </com.maxMustermannGeheim.linkcollection.Utilitys.AspectRatioLayout>-->
+    <!--    </com.maxMustermannGeheim.linkcollection.Utilitys.AspectRatioLayout>-->
 
 </LinearLayout>
