--- a/app/src/main/res/layout/list_item_video.xml
+++ b/app/src/main/res/layout/list_item_video.xml
@@ -27,7 +27,26 @@
         android:elevation="3dp"
         android:foreground="@drawable/ripple"
         android:orientation="horizontal"
+        android:gravity="center_vertical"
         android:padding="8dp">
+
+        <com.maxMustermannGeheim.linkcollection.Utilities.MinDimensionLayout
+            android:id="@+id/listItem_video_image_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:minMode="matchMax"
+            android:layout_marginRight="10dp"
+            app:minDimension="40dp">
+
+            <ImageView
+                android:id="@+id/listItem_video_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:maxWidth="60dp"
+                android:maxHeight="60dp"
+                android:adjustViewBounds="true"
+                tools:srcCompat="@drawable/simpsons_movie_poster" />
+        </com.maxMustermannGeheim.linkcollection.Utilities.MinDimensionLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
