--- a/app/src/main/res/layout/dialog_filter_by_rating.xml
+++ b/app/src/main/res/layout/dialog_filter_by_rating.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingVertical="16dp"
 
     android:orientation="vertical">
 
-    <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/dialog_filterByRating_chart"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1" />
+<!--    <com.github.mikephil.charting.charts.PieChart-->
+<!--        android:id="@+id/dialog_filterByRating_chart"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_weight="1" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,17 +20,25 @@
         android:orientation="vertical">
 
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="Übersicht"
+            android:layout_marginHorizontal="16dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/dialog_filterByRating_range"
+                android:id="@+id/dialog_advancedSearch_range"
                 style="@style/TextButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_weight="1"
                 android:textAlignment="center"
@@ -43,7 +52,7 @@
             android:layout_marginBottom="8dp">
 
             <SeekBar
-                android:id="@+id/dialog_filterByRating_singleBar"
+                android:id="@+id/dialog_advancedSearch_singleBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -54,7 +63,7 @@
                 android:progressTint="@color/colorTransparent" />
 
             <com.innovattic.rangeseekbar.RangeSeekBar
-                android:id="@+id/dialog_filterByRating_rangeBar"
+                android:id="@+id/dialog_advancedSearch_rangeBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
@@ -76,5 +85,43 @@
                 tools:alpha="0.5" />
 
         </FrameLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginHorizontal="16dp"
+        android:orientation="vertical">
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="Ansichtszeiten"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/dialog_advancedSearch_viewed_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                tools:text="04.10.2020 - 12.01.2021" />
+
+            <Button
+                android:id="@+id/dialog_advancedSearch_viewed_change"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Auswählen" />
+        </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
