--- a/app/src/main/res/layout/dialog_settings_video.xml
+++ b/app/src/main/res/layout/dialog_settings_video.xml
@@ -94,7 +94,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Feld für die Altersfreigabe anzeigen"
+                        android:text="Soll überlaufender Text in der Liste scrollen"
                         android:textSize="12sp" />
 
                 </LinearLayout>
