--- a/app/src/main/res/layout/list_item_show.xml
+++ b/app/src/main/res/layout/list_item_show.xml
@@ -13,6 +13,25 @@
     android:padding="8dp"
     android:gravity="center_vertical">
 
+    <com.maxMustermannGeheim.linkcollection.Utilities.MinDimensionLayout
+        android:id="@+id/listItem_show_image_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:minMode="matchMax"
+        android:layout_marginRight="10dp"
+        app:minDimension="40dp">
+
+        <ImageView
+            android:id="@+id/listItem_show_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:maxWidth="60dp"
+            android:maxHeight="60dp"
+            app:srcCompat="@drawable/ic_download"
+            tools:srcCompat="@drawable/simpsons_movie_poster" />
+    </com.maxMustermannGeheim.linkcollection.Utilities.MinDimensionLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
